Fix overflow-x issue

--- a/public/index.css
+++ b/public/index.css
@@ -16,6 +16,7 @@ body {
 	display: grid;
 	grid-template-rows: 2em 1fr 1.5em;
 	min-height: 100vh;
+	overflow-x: hidden;
 	margin: 0;
 }
 
